--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
   "dependencies": {
     "loader-utils": "1.1.0"
   },
+  "peerDependencies": {
+    "stylable": "^0.0.1"    
+  },
   "devDependencies": {
+    "chai": "^4.0.2",
     "memory-fs": "^0.4.1",
     "mocha": "^3.4.2",
+    "node-eval": "^1.1.0",
     "webpack": "^3.1.0"
   }
 }
