--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "Wix",
   "license": "MIT",
   "dependencies": {
-    "loader-utils": "1.1.0"
+    "loader-utils": "1.1.0",
+    "murmurhash": "0.0.2"
   },
   "peerDependencies": {
     "stylable": "^0.0.1"
