--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "murmurhash": "0.0.2"
   },
   "peerDependencies": {
-    "stylable": "^0.0.1"
+    "stylable": ">=0.0.9"
   },
   "devDependencies": {
     "chai": "^4.0.2",
