--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Wix",
   "license": "MIT",
   "dependencies": {
+    "deindent": "^0.1.0",
     "loader-utils": "1.1.0",
     "murmurhash": "0.0.2"
   },
