--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "stylable-loader",
   "version": "0.0.6",
   "description": "Loader for stylable css",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
-    "test": "mocha test/**/*.spec.*"
+    "test": "ts-mocha test/**/*.spec.*"
   },
   "keywords": [
     "stylable",
@@ -21,10 +21,16 @@
     "stylable": ">=0.0.11"
   },
   "devDependencies": {
+    "@types/chai": "^4.0.1",
+    "@types/mocha": "^2.2.41",
+    "@types/node": "^8.0.13",
+    "@types/webpack": "^3.0.4",
     "chai": "^4.0.2",
     "memory-fs": "^0.4.1",
     "mocha": "^3.4.2",
     "node-eval": "^1.1.0",
+    "ts-mocha": "^1.0.3",
+    "typescript": "^2.4.1",
     "webpack": "^3.1.0"
   }
 }
