--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   "license": "MIT",
   "dependencies": {
     "deindent": "^0.1.0",
+    "fs-extra": "^4.0.0",
     "loader-utils": "^1.1.0",
-    "minimist": "^1.2.0",
     "murmurhash": "^0.0.2",
-    "node-fs-extra": "^0.8.2"
+    "node-fs-extra": "^0.8.2",
+    "yargs": "^8.0.2"
   },
   "peerDependencies": {
     "stylable": ">=2.0.1"
