--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "stc": "./dist/src/build.js"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && cp test/fixtures/ dist/test/fixtures -r",
     "test": "tsc && ts-mocha test/**/*.spec.*",
     "prepublish": "npm run build"
   },
@@ -41,7 +41,6 @@
     "memory-fs": "^0.4.1",
     "mocha": "^3.4.2",
     "node-eval": "^1.1.0",
-    "stylable": "^1.0.2",
     "ts-mocha": "^1.0.3",
     "typescript": "^2.4.1",
     "webpack": "^3.1.0"
