--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "bin": {
     "stc": "./dist/src/build.js"
   },
+
   "scripts": {
     "build": "tsc && cp test/fixtures/ dist/test/fixtures -r",
+    "webpack": "webpack",
     "test": "tsc && ts-mocha test/**/*.spec.*",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "start": "rimraf dist && yarn build && concurrently --kill-others --success first \"yarn build -- -w\" \"webpack-dev-server --no-info\""
   },
   "keywords": [
     "stylable",
@@ -25,6 +28,8 @@
     "loader-utils": "^1.1.0",
     "murmurhash": "^0.0.2",
     "node-fs-extra": "^0.8.2",
+    "postcss": "^6.0.8",
+    "stylable": "2.0.4",
     "yargs": "^8.0.2"
   },
   "peerDependencies": {
@@ -37,13 +42,15 @@
     "@types/mocha": "^2.2.41",
     "@types/node": "^8.0.13",
     "@types/webpack": "^3.0.4",
+    "webpack": "3.4.1",
     "chai": "^4.0.2",
+    "concurrently": "~3.5.0",
     "memory-fs": "^0.4.1",
     "mocha": "^3.4.2",
+    "mocha-loader": "~1.1.1",
     "node-eval": "^1.1.0",
     "ts-mocha": "^1.0.3",
-    "typescript": "^2.4.1",
-    "webpack": "^3.1.0"
+    "typescript": "^2.4.1"
   },
   "files": [
     "dist/src",
