--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "htap": "^1.0.2",
     "loader-utils": "^1.1.0",
     "murmurhash": "^0.0.2",
+    "murmurhash-js": "1.0.0",
     "node-fs-extra": "^0.8.2",
     "postcss": "^6.0.8",
     "stylable": "3.0.0",
@@ -39,6 +40,7 @@
     "@types/loader-utils": "^1.1.0",
     "@types/memory-fs": "^0.3.0",
     "@types/mocha": "^2.2.41",
+    "@types/murmurhash-js": "1.0.2",
     "@types/node": "^8.0.13",
     "@types/webpack": "^3.0.4",
     "chai": "^4.0.2",
