--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "deindent": "^0.1.0",
+    "enhanced-resolve": "3.4.1",
     "fs-extra": "^4.0.0",
     "htap": "^1.0.2",
     "loader-utils": "^1.1.0",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.0.1",
+    "@types/enhanced-resolve": "3.0.3",
     "@types/loader-utils": "^1.1.0",
     "@types/memory-fs": "^0.3.0",
     "@types/mocha": "^2.2.41",
