Revert "Nadav/css bundle"

--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "stc": "./dist/src/build.js"
   },
   "scripts": {
-    "build": "tsc && cp test/fixtures/ dist/test/fixtures -r",
-    "webpack": "webpack",
-    "test": "tsc && mocha ./dist/test/index.js",
-    "prepublish": "npm run build",
-    "start": "rimraf dist && yarn build && concurrently --kill-others --success first \"yarn build -- -w\" \"webpack-dev-server --no-info\""
+    "build": "tsc",
+    "test": "tsc && ts-mocha test/**/*.spec.*",
+    "prepublish": "npm run build"
   },
   "keywords": [
     "stylable",
@@ -22,10 +20,11 @@
   "license": "MIT",
   "dependencies": {
     "deindent": "^0.1.0",
-    "enhanced-resolve": "^3.4.1",
+    "fs-extra": "^4.0.0",
     "htap": "^1.0.2",
     "loader-utils": "^1.1.0",
     "murmurhash": "^0.0.2",
+    "node-fs-extra": "^0.8.2",
     "yargs": "^8.0.2"
   },
   "peerDependencies": {
@@ -33,23 +32,19 @@
   },
   "devDependencies": {
     "@types/chai": "^4.0.1",
-    "@types/enhanced-resolve": "^3.0.3",
     "@types/loader-utils": "^1.1.0",
     "@types/memory-fs": "^0.3.0",
     "@types/mocha": "^2.2.41",
     "@types/node": "^8.0.13",
     "@types/webpack": "^3.0.4",
     "chai": "^4.0.2",
-    "concurrently": "^3.5.0",
     "memory-fs": "^0.4.1",
     "mocha": "^3.4.2",
-    "postcss": "^6.0.8",
-    "mocha-loader": "^1.1.1",
-    "stylable": "^3.0.0",
     "node-eval": "^1.1.0",
+    "stylable": "^1.0.2",
     "ts-mocha": "^1.0.3",
     "typescript": "^2.4.1",
-    "webpack": "^3.4.1"
+    "webpack": "^3.1.0"
   },
   "files": [
     "dist/src",
