--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   "dependencies": {
     "deindent": "^0.1.0",
     "enhanced-resolve": "^3.4.1",
+    "file-loader": "0.11.2",
     "htap": "^1.0.2",
     "loader-utils": "^1.1.0",
     "murmurhash": "^0.0.2",
+    "url-loader": "0.5.9",
     "yargs": "^8.0.2"
   },
   "peerDependencies": {
@@ -43,10 +45,10 @@
     "concurrently": "^3.5.0",
     "memory-fs": "^0.4.1",
     "mocha": "^3.4.2",
-    "postcss": "^6.0.8",
     "mocha-loader": "^1.1.1",
-    "stylable": "^3.0.0",
     "node-eval": "^1.1.0",
+    "postcss": "^6.0.8",
+    "stylable": "^3.0.0",
     "ts-mocha": "^1.0.3",
     "typescript": "^2.4.1",
     "webpack": "^3.4.1"
