--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/src/index.js",
   "types": "./dist/src/index.d.ts",
   "bin": {
-    "stc": "./dist/src/build.js"
+    "stc": "./dist/src/cli.js"
   },
   "scripts": {
     "build": "tsc && ncp test/fixtures/ dist/test/fixtures",
