--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "htap": "^1.0.2",
     "loader-utils": "^1.1.0",
     "murmurhash": "^0.0.2",
+    "webpack-sources": "^1.0.1",
     "yargs": "^8.0.2"
   },
   "peerDependencies": {
@@ -38,6 +39,7 @@
     "@types/mocha": "^2.2.41",
     "@types/node": "^8.0.24",
     "@types/webpack": "^3.0.9",
+    "@types/webpack-sources": "^0.1.3",
     "chai": "^4.1.1",
     "concurrently": "^3.5.0",
     "file-loader": "^0.11.2",
