--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stylable-integration",
   "version": "5.1.3",
   "description": "Integration utils for stylable",
+  "license": "BSD-3-Clause",
   "main": "./dist/src/index.js",
   "types": "./dist/src/index.d.ts",
   "bin": {
@@ -15,22 +16,15 @@
     "prepublish": "npm run build",
     "start": "rimraf dist && yarn build && concurrently --kill-others --success first \"yarn build -- -w\" \"webpack-dev-server --no-info\""
   },
-  "keywords": [
-    "stylable",
-    "webpack"
-  ],
-  "author": "Wix",
-  "license": "MIT",
+  "peerDependencies": {
+    "stylable": ">=4.0.0"
+  },
   "dependencies": {
     "deindent": "^0.1.0",
-    "htap": "^1.0.2",
     "loader-utils": "^1.1.0",
     "murmurhash": "^0.0.2",
     "webpack-sources": "^1.0.1",
     "yargs": "^8.0.2"
-  },
-  "peerDependencies": {
-    "stylable": ">=4.0.0"
   },
   "devDependencies": {
     "@types/chai": "^4.0.3",
@@ -62,5 +56,6 @@
     "webpack-loader.js",
     "webpack-plugin.js",
     "require.js"
-  ]
+  ],
+  "author": "Wix"
 }
