--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stylable-integration",
-  "version": "5.1.3",
+  "version": "5.1.4",
   "description": "Integration utils for stylable",
   "license": "BSD-3-Clause",
   "main": "./dist/src/index.js",
@@ -13,17 +13,18 @@
     "webpack": "webpack",
     "pretest": "yarn build",
     "test": "mocha ./dist/test/**/*.spec.js",
-    "prepublish": "npm run build",
-    "start": "rimraf dist && yarn build && concurrently --kill-others --success first \"yarn build -- -w\" \"webpack-dev-server --no-info\""
+    "prepublish": "npm run build"
   },
   "peerDependencies": {
-    "stylable": ">=4.0.0"
+    "stylable": ">=4.0.14"
   },
   "dependencies": {
     "deindent": "^0.1.0",
     "loader-utils": "^1.1.0",
     "murmurhash": "^0.0.2",
     "webpack-sources": "^1.0.1",
+    "url-loader": "^0.5.9",
+    "file-loader": "^0.11.2",
     "yargs": "^8.0.2"
   },
   "devDependencies": {
@@ -32,12 +33,10 @@
     "@types/memory-fs": "^0.3.0",
     "@types/mocha": "^2.2.41",
     "@types/node": "^8.0.24",
-    "@types/webpack": "^3.0.9",
+    "@types/webpack": "^3.0.10",
     "@types/webpack-sources": "^0.1.3",
     "chai": "^4.1.1",
     "concurrently": "^3.5.0",
-    "css-loader": "^0.28.7",
-    "file-loader": "^0.11.2",
     "memory-fs": "^0.4.1",
     "mocha": "^3.5.0",
     "mocha-loader": "^1.1.1",
@@ -45,10 +44,11 @@
     "node-eval": "^1.1.0",
     "postcss": "^6.0.9",
     "stylable": "^4.0.0",
+    "ts-loader": "^2.3.7",
     "ts-mocha": "^1.0.3",
     "typescript": "^2.4.2",
-    "url-loader": "^0.5.9",
-    "webpack": "^3.5.5"
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1"
   },
   "files": [
     "dist/src",
