--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "deindent": "^0.1.0",
     "file-loader": "^1.1.5",
+    "find-config": "^1.0.0",
     "loader-utils": "^1.1.0",
     "murmurhash": "^0.0.2",
     "url-loader": "^0.6.2",
