--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "webpack": "webpack",
     "pretest": "yarn build",
     "test": "mocha ./dist/test/**/*.spec.js",
-    "prepublish": "npm run build",
+    "prepublish": "yarn build",
     "ppub": "npm version patch; npm publish; git push; git push --tags;"
   },
   "peerDependencies": {
