fix ci issue on windows

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "webpack": "webpack",
     "pretest": "yarn build",
     "test": "mocha ./dist/test/**/*.spec.js",
+    "test:node": "yarn test",
     "prepublish": "yarn build",
     "ppub": "npm version patch; npm publish; git push; git push --tags;"
   },
