--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "webpack": "webpack",
     "pretest": "yarn build",
     "test": "mocha ./dist/test/**/*.spec.js",
-    "prepublish": "npm run build",
+    "test:node": "yarn test",
+    "prepublish": "yarn build",
     "ppub": "npm version patch; npm publish; git push; git push --tags;"
   },
   "peerDependencies": {
@@ -57,7 +58,8 @@
     "src",
     "webpack-loader.js",
     "webpack-plugin.js",
-    "require.js"
+    "require.js",
+    "jest.js"
   ],
   "author": "Wix"
 }
