--- a/tsconfig.json
+++ b/tsconfig.json
@@ -50,5 +50,12 @@
     /* Experimental Options */
     // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "dist",
+    "test-kit.d.ts",
+    "webpack-loader.d.ts",
+    "webpack-plugin.d.ts",
+  ]
 }
