--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "ppub": "npm version patch && npm publish && git push && git push --tags"
   },
   "peerDependencies": {
-    "stylable": ">=5.0.2"
+    "stylable": "next"
   },
   "dependencies": {
     "deindent": "^0.1.0",
@@ -46,7 +46,7 @@
     "ncp": "^2.0.0",
     "node-eval": "^2.0.0",
     "postcss": "^6.0.13",
-    "stylable": "^5.0.2",
+    "stylable": "next",
     "ts-loader": "^3.0.3",
     "ts-mocha": "^1.0.3",
     "typescript": "^2.5.3",
