--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stylable-integration",
-  "version": "6.0.9-rc.1",
+  "version": "6.0.9",
   "description": "Integration utils for stylable",
   "license": "BSD-3-Clause",
   "main": "./dist/src/index.js",
