--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/webpack-sources": "^0.1.4",
     "chai": "^4.1.2",
     "concurrently": "^3.5.1",
+    "identity-obj-proxy": "^3.0.0",
     "memory-fs": "^0.4.1",
     "mocha": "^5.0.1",
     "mocha-loader": "^1.1.3",
@@ -67,6 +68,8 @@
     "test-kit.js",
     "test-kit.d.ts",
     "require.js",
+    "require-hook.js",
+    "require-hook.d.ts",
     "jest.js"
   ],
   "author": "Wix"
